fixes and add alignment tool

--- a/src/components/navLink/style.scss
+++ b/src/components/navLink/style.scss
@@ -31,7 +31,7 @@
         }
 
         // margin-bottom: $standard-border-width * -2;
-        border-bottom: ($standard-border-width * 2) solid $color-accent;
+        // border-bottom: ($standard-border-width * 2) solid $color-accent;
     }
 
     &.muted {
