--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -56,7 +56,7 @@ h3 {
 
     &.mobile-view {
         padding: 0;
-        margin-top: $mobile-navbar-height + $mobile-app-header-height;
+        margin-top: $mobile-app-header-height;
         min-width: 100%;
     }
 }
